--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^16.18.91",
     "@types/react": "^18.2.73",
     "@types/react-dom": "^18.2.22",
+    "@types/yup": "^0.32.0",
     "axios": "^1.6.8",
     "formik": "^2.4.5",
     "moment": "^2.30.1",
