--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
+    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -17,11 +18,14 @@
     "@types/react-dom": "^18.2.22",
     "@types/yup": "^0.32.0",
     "axios": "^1.6.8",
+    "country-state-city": "^3.2.1",
     "formik": "^2.4.5",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
+    "react-carousel": "^4.3.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^7.7.1",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
